tests/errors/unknown_identifier.vhpt
--TEST--
Unexpected identifier error
--DESCRIPTION--
Tests that bare identifiers (not variables or keywords) produce an error
--FILE--
<?php
unknown;
--EXPECT_ERROR--
Unexpected token Identifier
